Fix unintended overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,6 @@
 
 body {
     min-height: 100vh;
-    min-width: 100vw;
     background-color: rgb(30 41 59);
 
 }
